--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ renderer.sublime-workspace
 renderer.sublime-project
 build/.vs/renderer/v15/Browse.VC.opendb
 build/.vs/renderer/v15/Browse.VC.db
+build/.vs/renderer/v15/ipch/AutoPCH/c747aa8ad4f66838/RENDERER.ipch
