Iniciando separacao entre igreja e estado

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ renderer.sublime-project
 build/.vs/renderer/v15/Browse.VC.opendb
 build/.vs/renderer/v15/Browse.VC.db
 build/.vs/renderer/v15/ipch/AutoPCH/c747aa8ad4f66838/RENDERER.ipch
+build/.vs/renderer/v15/ipch/AutoPCH/aae2063b0937a00d/RENDERER.ipch
