--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,8 @@ build/.vs/renderer/v15/Browse.VC.opendb
 build/.vs/renderer/v15/Browse.VC.db
 build/.vs/renderer/v15/ipch/AutoPCH/c747aa8ad4f66838/RENDERER.ipch
 build/.vs/renderer/v15/ipch/AutoPCH/aae2063b0937a00d/RENDERER.ipch
+tools/ctime.exe
+build/renderer.pdb
+build/renderer.obj
+build/renderer.ilk
+build/.vs/renderer/v15/.suo
