output de sine wave fixa, sem uso de buffer interno

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,7 @@ build/renderer.pdb
 build/renderer.obj
 build/renderer.ilk
 build/.vs/renderer/v15/.suo
+build/psychosnake.pdb
+build/psychosnake.obj
+build/psychosnake.ilk
+build/psychosnake.exe
