ajustes e etapas do gameplay

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,4 @@ build/genfont.obj
 build/genfont.ilk
 build/genfont.exe
 build/.vs/psychosnake/v15/ipch/AutoPCH/5d43860df5965c82/MAIN_WIN32.ipch
+build/.vs/psychosnake/v15/ipch/AutoPCH/e5834b52e2b41039/MAIN_WIN32.ipch
